--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -24,8 +24,13 @@ jobs:
 
       - name: Run RPC tests
         run: |
-          TEST_OUTPUT=$(docker run --rm -e PRIVATE_KEY=${{ secrets.QA_PRIVATE_KEY }} rpc-tests:latest 2>&1)
-          echo "$TEST_OUTPUT"
+          docker run --rm -e PRIVATE_KEY=${{ secrets.QA_PRIVATE_KEY }} rpc-tests:latest 2>&1 | tee rpc-tests/test_output.txt
+        continue-on-error: true
+        working-directory: ./rpc-tests
+
+      - name: Parse Test Results
+        run: |
+          TEST_OUTPUT=$(cat rpc-tests/test_output.txt)
           PASSED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\K\d+(?=\s+passed)')
           FAILED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\K\d+(?=\s+failed)')
           SKIPPED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\d+\s+failed,\s+\K\d+(?=\s+skipped)')
@@ -41,7 +46,7 @@ jobs:
           fi
           echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
           echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
-        continue-on-error: true
+        working-directory: ./rpc-tests
 
       - name: Send Slack Notification
         if: always()
