Read file from mounted drive

--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -24,13 +24,18 @@ jobs:
 
       - name: Run RPC tests
         run: |
-          docker run --rm -e PRIVATE_KEY=${{ secrets.QA_PRIVATE_KEY }} rpc-tests:latest 2>&1 | tee rpc-tests/test_output.txt
+          mkdir -p rpc-tests/reports
+          docker run --rm -e PRIVATE_KEY=${{ secrets.QA_PRIVATE_KEY }} -v ${{ github.workspace }}/rpc-tests/reports:/usr/src/app/reports rpc-tests:latest 2>&1 | tee rpc-tests/reports/test_output.txt
         continue-on-error: true
-        working-directory: ./rpc-tests
+
+      - name: Verify test output file exists
+        run: |
+          ls -alh rpc-tests/reports
+          cat rpc-tests/reports/test_output.txt
 
       - name: Parse Test Results
         run: |
-          TEST_OUTPUT=$(cat rpc-tests/test_output.txt)
+          TEST_OUTPUT=$(cat rpc-tests/reports/test_output.txt)
           PASSED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\K\d+(?=\s+passed)')
           FAILED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\K\d+(?=\s+failed)')
           SKIPPED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\d+\s+failed,\s+\K\d+(?=\s+skipped)')
