--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -18,24 +18,24 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
+        id: build_image
         run: |
           cd rpc-tests
           docker build -t rpc-tests:latest .
 
       - name: Run RPC tests
+        id: run_tests
         run: |
           mkdir -p rpc-tests/reports
           docker run --rm -e PRIVATE_KEY=${{ secrets.QA_PRIVATE_KEY }} -v ${{ github.workspace }}/rpc-tests/reports:/usr/src/app/reports rpc-tests:latest 2>&1 | tee rpc-tests/reports/test_output.txt
         continue-on-error: true
 
       - name: Display Test Output Content
-        working-directory: ./rpc-tests
-        run: cat reports/test_output.txt
+        run: cat ${{ github.workspace }}/rpc-tests/reports/test_output.txt
 
       - name: Parse Test Results
-        working-directory: ./rpc-tests
         run: |
-          TEST_OUTPUT=$(cat reports/test_output.txt)
+          TEST_OUTPUT=$(cat ${{ github.workspace }}/rpc-tests/reports/test_output.txt)
           PASSED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\K\d+(?=\s+passed)')
           FAILED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\K\d+(?=\s+failed)')
           SKIPPED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\d+\s+failed,\s+\K\d+(?=\s+skipped)')
