--- a/e2e/package.json
+++ b/e2e/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "nh e2e",
+  "name": "zkverify_e2e",
   "version": "1.0.0",
   "scripts": {
     "test": "jest"
-  },
-  "jest": {
-    "verbose": true
   },
   "author": "Horizen Labs",
   "license": "ISC",
   "dependencies": {
     "@polkadot/api": "^11.0.2",
     "dotenv": "^16.4.5",
-    "web3": "^4.8.0"
+    "web3": "^4.9.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@babel/preset-env": "7.21.5",
+    "@babel/preset-typescript": "7.21.5",
+    "@jest/globals": "29.5.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "20.1.1",
+    "@types/web3": "^1.2.2",
+    "babel-jest": "29.5.0",
+    "jest": "29.5.0",
+    "ts-jest": "29.1.0",
+    "typescript": "5.0.4"
   }
 }
