--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -7,15 +7,16 @@ on:
   pull_request:
 
 jobs:
-  build-and-test:
+  e2e-build-and-test:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: e2e-tests
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -23,53 +24,39 @@ jobs:
           node-version: '18'
 
       - name: Run setup script
-        run: |
-          cd e2e-tests
-          ./setup.sh --fetch-latest --rebuild
+        run: ./setup.sh --fetch-latest --rebuild
 
       - name: Install npm dependencies
-        run: |
-          cd e2e-tests
-          npm install
+        run: npm install
 
       - name: Set up Docker containers
         run: |
-          cd e2e-tests
           docker-compose down -v
           docker-compose build --no-cache
           docker-compose up -d
 
-      - name: Wait for Docker containers to be ready
+      - name: Wait for Attestation Bot to be ready
         run: |
-          sleep 60
+          MAX_WAIT_TIME=300
+          wait_time=0
           while true; do
-            if docker-compose exec -T local_node curl -s http://localhost:9944 -o /dev/null; then
-              echo "Docker containers are ready."
+            CONTRACT_ADDRESS=$(docker-compose exec attestation-bot sh -c "echo \$NH_ATTEST_BOT_NH_CONTRACT_ADDRESS")
+            PRIVATE_KEY=$(docker-compose exec attestation-bot sh -c "echo \$NH_ATTEST_BOT_OPERATOR_SECRET_KEY")
+            if [ ! -z "$CONTRACT_ADDRESS" ] && [ ! -z "$PRIVATE_KEY" ]; then
+              echo "Attestation bot is ready."
+              echo "NH_CONTRACT=$CONTRACT_ADDRESS" >> $GITHUB_ENV
+              echo "PRIVATE_KEY=$PRIVATE_KEY" >> $GITHUB_ENV
               break
-            else
-              echo "Waiting for Docker containers to be ready..."
-              sleep 10
             fi
-          done
-
-      - name: Get contract data
-        run: |
-          while true; do
-            if [ -f e2e-tests/services/nh-core/docker/resources/deploy/contract_data.txt ]; then
-              CONTRACT_ADDRESS=$(sed -n '1p' e2e-tests/services/nh-core/docker/resources/deploy/contract_data.txt | cut -d ' ' -f 3)
-              PRIVATE_KEY=$(sed -n '2p' e2e-tests/services/nh-core/docker/resources/deploy/contract_data.txt | cut -d ' ' -f 3)
-              if [ ! -z "$CONTRACT_ADDRESS" ] && [ ! -z "$PRIVATE_KEY" ]; then
-                echo "Contract data is ready."
-                echo "NH_CONTRACT=$CONTRACT_ADDRESS" >> $GITHUB_ENV
-                echo "PRIVATE_KEY=$PRIVATE_KEY" >> $GITHUB_ENV
-                break
-              fi
+            if [ "$wait_time" -ge "$MAX_WAIT_TIME" ]; then
+              echo "Timeout reached: Attestation bot is not ready."
+              exit 1
             fi
-            echo "Waiting for contract data..."
-            sleep 10
+            echo "Waiting for Attestation bot to be ready..."
+            sleep 5
+            wait_time=$((wait_time + 5))
           done
 
       - name: Run E2E tests
         run: |
-          cd e2e-tests
           WEBSOCKET=ws://127.0.0.1:9944 PRIVATE_KEY=${{ secrets.PRIVATE_KEY }} npm run test
