Pass the GH_TOKEN secret to the setup script

--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -24,6 +24,8 @@ jobs:
           node-version: '18'
 
       - name: Run setup script
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: ./setup.sh --fetch-latest --rebuild
 
       - name: Install npm dependencies
