Pull the published zkVerify image and use it in the github actions workflow

--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Pull Docker image for zkVerify
+        run: docker pull horizenlabs/zkverify:latest
+
       - name: Run setup script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
