Add test reporting and slack message to workflow for e2e

--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Pull Docker image for zkVerify
         run: docker pull horizenlabs/zkverify:latest
 
-      - name: Run setup script
+      - name: Run setup script (git clone latest zkVerify & attestation-bot repos)
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: ./setup.sh --fetch-latest --rebuild
+        run: ./setup.sh --fetch-latest
 
       - name: Install npm dependencies
         run: npm install
@@ -58,12 +58,66 @@ jobs:
               exit 1
             fi
             echo "Waiting for contract data file to be ready..."
-            sleep 2
-            wait_time=$((wait_time + 5))
+            sleep 3
+            wait_time=$((wait_time + 3))
           done
 
       - name: Run E2E tests
+        id: run_tests
         run: |
-          WEBSOCKET=ws://127.0.0.1:9944 npm run test
+          mkdir -p reports
+          WEBSOCKET=ws://127.0.0.1:9944 NH_CONTRACT=${{ env.NH_CONTRACT }} npm run test 2>&1 | tee reports/test_output.txt
+
+      - name: Parse Test Results
+        run: |
+          TEST_OUTPUT=$(cat reports/test_output.txt)
+          
+          PASSED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\K\d+(?=\s+passed)')
+          FAILED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\K\d+(?=\s+failed)')
+          SKIPPED=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\d+\s+passed,\s+\d+\s+failed,\s+\K\d+(?=\s+skipped)')
+          TOTAL=$(echo "$TEST_OUTPUT" | grep -oP 'Tests:\s+\K\d+(?=\s+total)')
+          
+          PASSED=${PASSED:-0}
+          FAILED=${FAILED:-0}
+          SKIPPED=${SKIPPED:-0}
+          TOTAL=${TOTAL:-0}
+
+          echo "PASSED=$PASSED" >> $GITHUB_ENV
+          echo "FAILED=$FAILED" >> $GITHUB_ENV
+          echo "SKIPPED=$SKIPPED" >> $GITHUB_ENV
+          echo "TOTAL=$TOTAL" >> $GITHUB_ENV
+
+          if [ "$FAILED" -eq 0 ]; then
+            OVERALL_STATUS="success"
+            OVERALL_STATUS_EMOJI=":large_green_circle:"
+          else
+            OVERALL_STATUS="failure"
+            OVERALL_STATUS_EMOJI=":red_circle:"
+          fi
+
+          echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
+          echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
+
+          if [ "$OVERALL_STATUS" == "failure" ]; then
+            exit 1
+          fi
+
+      - name: Send Slack Notification
+        if: always()
+        uses: slackapi/slack-github-action@v1.25.0
+        with:
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "${{ env.OVERALL_STATUS_EMOJI }} *zkVerify E2E (Local) TEST STATUS:* ${{ env.OVERALL_STATUS }} ${{ env.OVERALL_STATUS_EMOJI }}\n*Test Results:*\n*Passed:* ${{ env.PASSED }}\n*Failed:* ${{ env.FAILED }}\n*Skipped:* ${{ env.SKIPPED }}\n*Total:* ${{ env.TOTAL }}\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
+                  }
+                }
+              ]
+            }
         env:
-          NH_CONTRACT: ${{ env.NH_CONTRACT }}
+          SLACK_WEBHOOK_URL: ${{ secrets.QA_SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
