--- a/e2e-tests/services/anvil/Dockerfile
+++ b/e2e-tests/services/anvil/Dockerfile
@@ -1,12 +1,17 @@
 FROM ghcr.io/foundry-rs/foundry
 
+# Set working directory
 WORKDIR /anvil
 
+# Install required packages
 RUN apk --no-cache add curl jq
 
+# Copy entrypoint script and contracts
 COPY ./anvil/entrypoint.sh /anvil/entrypoint.sh
-COPY ./nh-attestation-bot/contracts /anvil/contracts
+COPY ./zkv-attestation-contracts/contracts /anvil/contracts
 
+# Make entrypoint script executable
 RUN chmod +x /anvil/entrypoint.sh
 
+# Define entrypoint
 ENTRYPOINT ["/bin/sh", "/anvil/entrypoint.sh"]
