--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -16,16 +16,15 @@ jobs:
 
       - name: Build Docker image
         id: build_image
-        run: docker build -t rpc-tests:latest .
-        working-directory: src/rpc-tests
+        run: docker build -t rpc-tests:latest -f src/rpc-tests/Dockerfile .
+        working-directory: .
 
       - name: Run RPC tests
         id: run_tests
         run: |
           mkdir -p reports
           docker run --rm -e PRIVATE_KEY=${{ secrets.QA_PRIVATE_KEY }} -v ${{ github.workspace }}/src/rpc-tests/reports:/usr/src/app/reports rpc-tests:latest 2>&1 | tee reports/test_output.txt
-        working-directory: src/rpc-tests
-        continue-on-error: true
+        working-directory: .
 
       - name: Parse Test Results
         run: |
