--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "scripts": {
     "test:e2e": "cp .env.local.e2e .env && jest --config=jest.config.e2e.js --forceExit --verbose",
     "test:rpc:local": "cp .env.local.rpc .env && jest --config=jest.config.local.rpc.js --verbose",
-    "test:rpc:testnet": "cp .env.testnet.rpc .env && jest --config=jest.config.testnet.rpc.js --forceExit --verbose"
+    "test:rpc:testnet": "cp .env.testnet.rpc .env && jest --config=jest.config.testnet.rpc.js --forceExit --verbose",
+    "generate:groth16": "cp .env.generator .env && npx ts-node src/proof-generator/index.ts $INTERVAL $DURATION"
   },
   "dependencies": {
     "@polkadot/api": "^11.0.3",
     "async-mutex": "^0.5.0",
     "axios": "1.4.0",
+    "circom": "^0.5.46",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
+    "snarkjs": "^0.7.4",
     "web3": "^4.9.0",
     "yaml": "2.3.0"
   },
@@ -25,6 +28,7 @@
     "@types/debug": "^4.1.12",
     "@types/jest": "^29.5.1",
     "@types/node": "20.1.1",
+    "@types/snarkjs": "^0.7.8",
     "@types/web3": "^1.2.2",
     "babel-jest": "29.5.0",
     "bn": "^1.0.5",
@@ -33,6 +37,7 @@
     "jest": "29.5.0",
     "jest-html-reporter": "3.10.0",
     "ts-jest": "29.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "5.0.4"
   },
   "jest": {
