Function to write inputs to data directory, and gitignore it.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ test-report-*.html
 src/e2e-tests/services/zkVerify
 src/e2e-tests/services/nh-attestation-bot
 src/e2e-tests/services/zkv-attestation-contracts
+src/proof-generator/fflonk/circuit/data
+src/proof-generator/groth16/circuit/data
