--- a/.env.local.e2e
+++ b/.env.local.e2e
@@ -1,6 +1,6 @@
 DEV_MODE=true
-RPC_URL=http://locahost:9944
-WEBSOCKET=wss://127.0.0.1:9944
+RPC_URL=http://localhost:9944
+WEBSOCKET=wss://localhost:9944
 ANVIL=http://localhost:8545
 ZKV_CONTRACT=0x5FbDB2315678afecb367f032d93F642f64180aa3
 PRIVATE_KEY=//Alice
