restructure setup files, add beginnings of boojum generation...

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ src/e2e-tests/services/nh-attestation-bot
 src/e2e-tests/services/zkv-attestation-contracts
 src/proof-generator/fflonk/circuit/data
 src/proof-generator/groth16/circuit/data
+src/proof-generator/repos
