boojum proof generation and instructions, rename PRIVATE_KEY to SEED_PHRASE

--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -23,7 +23,7 @@ jobs:
         id: run_tests
         run: |
           mkdir -p src/rpc-tests/reports
-          docker run --rm -e PRIVATE_KEY=${{ secrets.QA_PRIVATE_KEY }} -v ${{ github.workspace }}/src/rpc-tests/reports:/usr/src/app/reports rpc-tests:latest 2>&1 | tee src/rpc-tests/reports/test_output.txt
+          docker run --rm -e SEED_PHRASE=${{ secrets.QA_SEED_PHRASE }} -v ${{ github.workspace }}/src/rpc-tests/reports:/usr/src/app/reports rpc-tests:latest 2>&1 | tee src/rpc-tests/reports/test_output.txt
         working-directory: .
 
       - name: Parse Test Results
