--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,7 @@ src/e2e-tests/services/nh-attestation-bot
 src/e2e-tests/services/zkv-attestation-contracts
 src/proof-generator/fflonk/circuit/data
 src/proof-generator/groth16/circuit/data
+src/proof-generator/boojum/data
+src/proof-generator/boojum/target
+src/proof-generator/boojum/output.log
 src/proof-generator/repos
