--- a/src/rpc-tests/docker-compose.yml
+++ b/src/rpc-tests/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     environment:
       - RPC_URL=${RPC_URL}
       - WEBSOCKET=${WEBSOCKET}
-      - PRIVATE_KEY=${PRIVATE_KEY}
+      - SEED_PHRASE=${SEED_PHRASE}
     command: >
       sh -c "if [ \"$TEST_ENV\" = 'local' ]; then npm run test:rpc:local; else npm run test:rpc:testnet; fi"
