--- a/.env.generator
+++ b/.env.generator
@@ -1,2 +1,2 @@
 WEBSOCKET=wss://testnet-rpc.zkverify.io
-PRIVATE_KEY="INSERT_SEED_PHRASE"
+SEED_PHRASE="below call upper total loop royal isolate rally win dirt quick tag"
