Working proof generation for risc0 with hardcoded values.

--- a/src/proof-generator/risc0/methods/guest/Cargo.toml
+++ b/src/proof-generator/risc0/methods/guest/Cargo.toml
@@ -10,4 +10,4 @@ path = "src/bin/multiply.rs"
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "1.0.4", default-features = false, features = ['std'] }
+risc0-zkvm = { version = "1.0.4", default-features = false }
