--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ src/proof-generator/boojum/data
 src/proof-generator/boojum/target
 src/proof-generator/boojum/output.log
 src/proof-generator/repos
+src/proof-generator/risc0/.DS_Store
+src/proof-generator/risc0/Cargo.lock
+src/proof-generator/risc0/methods/guest/Cargo.lock
+src/proof-generator/risc0/target
