--- a/src/proof-generator/risc0/host/Cargo.toml
+++ b/src/proof-generator/risc0/host/Cargo.toml
@@ -8,3 +8,4 @@ multiply-methods = { path = "../methods" }
 risc0-zkvm = { version = "1.0.4" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
+bincode = "1.3"
