--- a/src/proof-generator/risc0/Cargo.toml
+++ b/src/proof-generator/risc0/Cargo.toml
@@ -4,8 +4,10 @@ members = ["host", "methods"]
 
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
-opt-level = 3
+opt-level = 1
 
 [profile.release]
 debug = 1
 lto = true
+incremental = true
+
