Web3 959 unique proof generation (#11)
risc0, groth16, fflonk proof generation.  Also boojum proof setup, but no typescript code to handle it yet as we support only zksync not boojum itself.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,14 @@ test-report-*.html
 src/e2e-tests/services/zkVerify
 src/e2e-tests/services/nh-attestation-bot
 src/e2e-tests/services/zkv-attestation-contracts
+src/proof-generator/fflonk/circuit/data
+src/proof-generator/groth16/circuit/data
+src/proof-generator/boojum/data
+src/proof-generator/boojum/target
+src/proof-generator/boojum/output.log
+src/proof-generator/repos
+src/proof-generator/risc0/.DS_Store
+src/proof-generator/risc0/Cargo.lock
+src/proof-generator/risc0/methods/guest/Cargo.lock
+src/proof-generator/risc0/target
+src/proof-generator/risc0/data
