Specify branches and docker image for e2e tests using zkverify, attestation bot and zkv attestation contracts. Github Actions workflow is now callable from other workflows or manually with ability to pass in specific branches and docker tags or use defaults.

--- a/src/e2e-tests/docker-compose.yml
+++ b/src/e2e-tests/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.8"
 
 services:
   anvil-node:
@@ -11,7 +12,7 @@ services:
       - "8545:8545"
 
   local_node:
-    image: horizenlabs/zkverify:latest
+    image: horizenlabs/zkverify:${ZKVERIFY_IMAGE_TAG}
     env_file:
       - ./services/zkVerify/docker/resources/envs/.env.local
     ports:
@@ -19,12 +20,12 @@ services:
       - "30333:30333"
 
   node_alice:
-    image: horizenlabs/zkverify:latest
+    image: horizenlabs/zkverify:${ZKVERIFY_IMAGE_TAG}
     env_file:
       - ./services/zkVerify/docker/resources/envs/.env.alice
 
   node_bob:
-    image: horizenlabs/zkverify:latest
+    image: horizenlabs/zkverify:${ZKVERIFY_IMAGE_TAG}
     env_file:
       - ./services/zkVerify/docker/resources/envs/.env.bob
     volumes:
