Web3 928 e2e branch docker tag options (#12)
* Specify branches and docker image for e2e tests using zkverify, attestation bot and zkv attestation contracts. Github Actions workflow is now callable from other workflows or manually with ability to pass in specific branches and docker tags or use defaults.

--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -1,10 +1,43 @@
 name: zkVerify E2E Tests
 
 on:
-  schedule:
-    - cron: '0 18 * * *'
   workflow_dispatch:
-  pull_request:
+    inputs:
+      zkverify_tag:
+        description: 'Docker image tag for zkverify'
+        default: 'latest'
+      zkverify_branch:
+        description: 'Branch for zkVerify repository'
+        default: 'main'
+      attestation_bot_branch:
+        description: 'Branch for attestation bot'
+        default: 'main'
+      zkv_contracts_branch:
+        description: 'Branch for zkv attestation contracts'
+        default: 'main'
+
+  workflow_call:
+    inputs:
+      zkverify_tag:
+        description: 'Docker image tag for zkverify'
+        required: false
+        type: string
+        default: 'latest'
+      zkverify_branch:
+        description: 'Branch for zkVerify repository'
+        required: false
+        type: string
+        default: 'main'
+      attestation_bot_branch:
+        description: 'Branch for attestation bot'
+        required: false
+        type: string
+        default: 'main'
+      zkv_contracts_branch:
+        description: 'Branch for zkv attestation contracts'
+        required: false
+        type: string
+        default: 'main'
 
 jobs:
   e2e-build-and-test:
@@ -20,12 +53,16 @@ jobs:
           node-version: '18'
 
       - name: Pull Docker image for zkVerify
-        run: docker pull horizenlabs/zkverify:latest
+        run: docker pull horizenlabs/zkverify:${{ github.event.inputs.zkverify_tag || inputs.zkverify_tag }}
 
       - name: Run setup script (git clone latest zkVerify & attestation-bot repos)
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: ./setup.sh --fetch-latest
+        run: |
+          ./setup.sh --fetch-latest \
+            --zkverify-branch ${{ github.event.inputs.zkverify_branch || inputs.zkverify_branch }} \
+            --nh-attestation-bot-branch ${{ github.event.inputs.attestation_bot_branch || inputs.attestation_bot_branch }} \
+            --zkv-attestation-contracts-branch ${{ github.event.inputs.zkv_contracts_branch || inputs.zkv_contracts_branch }}
         working-directory: src/e2e-tests
 
       - name: Install npm dependencies
@@ -35,8 +72,8 @@ jobs:
       - name: Set up Docker containers
         run: |
           docker-compose down -v
-          docker-compose build --no-cache
-          docker-compose up -d
+          ZKVERIFY_IMAGE_TAG=${{ github.event.inputs.zkverify_tag || inputs.zkverify_tag }} docker-compose build --no-cache
+          ZKVERIFY_IMAGE_TAG=${{ github.event.inputs.zkverify_tag || inputs.zkverify_tag }} docker-compose up -d
         working-directory: src/e2e-tests
 
       - name: Wait for Ethereum contract to be deployed
